adding all images and removing teams section for now, fixing some formatting as well

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="menu">
                 <li class="About Us"><a href="#about-us">About Us</a></li>
                 <li class="our-team-navbar">
-                    <a href="#our-teams">Our Teams</a>
+                    <a>Our Teams</a>
                 <ul class="dropdown">
                     <li><a href="our-teams-pages/internal-team.html">Internal</a></li>
                     <li><a href="our-teams-pages/prof-dev.html">Professional Development</a></li>
@@ -81,7 +81,7 @@
                         Education.
                     </div>
                     <div class="about-us-right">
-                        Through our academic development team, we provide academic opportunities and resources for students of 
+                        Through our <a class="about-us-link" href="/our-teams-pages/aca-dev.html"> Academic Development Team</a>, we provide academic opportunities and resources for students of 
                         all skill levels to learn and grow in the field of data science and statistics.
                     </div>
                 </div>
@@ -90,10 +90,16 @@
                         Career.
                     </div>
                     <div class="about-us-right">
-                        Our group that enables a diverse community of
-                        passionate individuals to explore, learn, grow,
-                        and engage in social good in the world of Data Science
-                        and Statistics.
+                        Our <a class="about-us-link" href="/our-teams-pages/prof-dev.html">Professional Development</a> events will provide students exposure to Data Science and Statistics in a professional workplace and give the confidence to continue to pursue a career in this pathway. 
+
+                    </div>
+                </div>
+                <div class="about-us-text">
+                    <div class="about-us-left">
+                        Consulting.
+                    </div>
+                    <div class="about-us-right">
+                        Our <a class="about-us-link" href="/our-teams-pages/consulting.html">Consulting Team</a> provides students with the opportunity to work on real-world data science and statistics projects for non-profit organizations and businesses.
                     </div>
                 </div>
                 <div class="about-us-text">
@@ -101,16 +107,13 @@
                         Community.
                     </div>
                     <div class="about-us-right">
-                        Our group that enables a diverse community of
-                        passionate individuals to explore, learn, grow,
-                        and engage in social good in the world of Data Science
-                        and Statistics.
+                        SDSS is dedicated to providing a supportive and positive community at UofT. Our <a class='about-us-link' href="/our-teams-pages/internal-team.html">Internal Team</a> establishes the foundation of our community and ensures that our members are able to grow and learn in a safe and welcoming environment.
                     </div>
                 </div>
 
             </div>
         </div>
-        <div class="our-teams" id="our-teams">
+        <!-- <div class="our-teams" id="our-teams">
             <div class="subtitle">Our Teams</div>
             <div class="our-teams-container">
                 <div class="row-1">
@@ -141,7 +144,7 @@
 
 
             </div>
-        </div>
+        </div> -->
         <div class="events" id="events">
             <div class="subtitle">
                 Events
