--- a/our-teams-pages/aca-dev.html
+++ b/our-teams-pages/aca-dev.html
@@ -81,7 +81,7 @@
         </div>
 
         <div class="subteam-title">Outreach</div>
-        <div class="team-image-row">
+        <div class="team-image-row spacing-down">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/vicky.jpg"/>
                 <div class="exec-caption">
