--- a/our-teams-pages/internal-team.html
+++ b/our-teams-pages/internal-team.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         
-        <div class="subteam-title">Operations</div>
+        <div class="subteam-title operations">Operations</div>
         <div class="team-image-row">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/amanda.jpg"/>
@@ -77,6 +77,19 @@
             </div>
         </div>
 
+        <div class='subteam-title web-dev'>Web Development</div>
+        <div class="team-image-row">
+            <div class="exec-container">
+                <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/shirley.jpg"/>
+                <div class="exec-caption">
+                    <div class="exec-name">Shirley Chen</div>
+                <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
+                <div class="exec-position">Web Developer</div>
+                <div class="exec-socials"></div>
+                </div>
+            </div>
+        </div>
+
         <div class="subteam-title">Marketing</div>
         <div class="team-image-row">
             <div class="exec-container">
@@ -89,17 +102,17 @@
                 </div>
                 
             </div>
-            <!-- <div class="exec-container">
-                <img class="exec-image"/>
-                <div class="exec-name"></div>
+            <div class="exec-container">
+                <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/jessica.jpg"/>
+                <div class="exec-name">Jessica Im</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Graphic Designer</div>
                 <div class="exec-socials"></div>
-            </div> -->
+            </div>
         </div>
 
         <div class="subteam-title">Finance</div>
-        <div class="team-image-row">
+        <div class="team-image-row spacing-down">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/jake.jpg"/>
                 <div class="exec-caption">
@@ -118,6 +131,7 @@
                 <div class="exec-socials"></div>
             </div>
         </div>
+
     </div>
 
     <footer class="footer">
