--- a/our-teams-pages/prof-dev.html
+++ b/our-teams-pages/prof-dev.html
@@ -80,7 +80,7 @@
         </div>
 
         <div class="subteam-title">Outreach</div>
-        <div class="team-image-row">
+        <div class="team-image-row spacing-down">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/shiri.jpg"/>
                 <div class="exec-caption">
