adding fading after loading, making navbar stay when navigating to other pages

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
+    <header>
     <nav class="navbar ms-auto" id="navBar">
         <!-- LOGO -->
-        <a href="#index.html"><img src="sdss-website-images/black-sdss-logo.png" alt="logo" /></a>
+        <a href="#"><img src="sdss-website-images/black-sdss-logo.png" alt="logo" /></a>
         <!-- NAVIGATION MENU -->
         <ul class="nav-links">
             <input type="checkbox" id="checkbox_toggle" />
@@ -23,10 +24,10 @@
                 <li class="our-team-navbar">
                     <a>Our Teams</a>
                 <ul class="dropdown">
-                    <li><a href="our-teams-pages/internal-team.html">Internal</a></li>
-                    <li><a href="our-teams-pages/prof-dev.html">Professional Development</a></li>
-                    <li><a href="our-teams-pages/aca-dev.html">Academic Development</a></li>
-                    <li><a href="our-teams-pages/consulting.html">Consulting</a></li>
+                    <li ng-class="{ active: isActive('/internal-team')}"><a href="/our-teams-pages/internal-team.html">Internal</a></li>
+                    <li ng-class="{ active: isActive('/prof-dev')}"><a href="/our-teams-pages/prof-dev.html">Professional Development</a></li>
+                    <li ng-class="{ active: isActive(/aca-dev')}"><a href="/our-teams-pages/aca-dev.html">Academic Development</a></li>
+                    <li ng-class="{ active: isActive('/consulting')}"><a href="/our-teams-pages/consulting.html">Consulting</a></li>
                 </ul>
                 <li><a href="#events">Events</a></li>
                 <li><a href="#join-us">Join Us</a></li>
@@ -34,8 +35,10 @@
             </div>
         </ul>
     </nav>
+    </header>
+    <ng-view></ng-view>
 
-    <div class="content">
+    <div class="content" id="fade-in">
         <div class="intro">
             <div class="intro1">
                 University of Toronto's
@@ -72,7 +75,7 @@
         </div>
     </div>
 
-    <div class="content">
+    <div class="content" id="fade-in">
         <div class="about-us" id="about-us">
             <div class="subtitle">About Us</div>
             <div class="about-us-container">
