--- a/our-teams-pages/aca-dev.html
+++ b/our-teams-pages/aca-dev.html
@@ -38,7 +38,7 @@
     </nav>
 
 
-    <div class="content">
+    <div class="content" id="fade-in">
         <div class="team-title">Academic Development</div>
         <div class="team-description">The Academic Development Team is dedicated to planning monthly academic-based events and gathering resources for students interested in Data Science and Statistics of all different skill levels.</div>
         <div class="team-image-row">
