--- a/our-teams-pages/consulting.html
+++ b/our-teams-pages/consulting.html
@@ -38,7 +38,7 @@
     </nav>
 
 
-    <div class="content-teams">
+    <div class="content-teams" id="fade-in">
         <div class="team-title">Consulting Team</div>
         <div class="team-description">Our group that enables a diverse community of passionate individuals to explore, learn, grow, and engage in social good in the world of Data Science and Statistics.</div>
         
