--- a/our-teams-pages/internal-team.html
+++ b/our-teams-pages/internal-team.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="../css/teams.css"/>
         <link rel="stylesheet" href="../css/style.css"/>
     </head>
-<body>
+<body id="fade-in">
 
     <nav class="navbar ms-auto" id="navBar">
         <!-- LOGO -->
@@ -36,7 +36,7 @@
         </ul>
     </nav>
 
-    <div class="content">
+    <div class="content" id="fade-in">
         <div class="team-title">Internal Team</div>
         <div class="team-description">Our group that enables a diverse community of passionate individuals to explore, learn, grow, and engage in social good in the world of Data Science and Statistics.</div>
         <div class="team-image-row">
