--- a/our-teams-pages/prof-dev.html
+++ b/our-teams-pages/prof-dev.html
@@ -37,7 +37,7 @@
         </ul>
     </nav>
 
-    <div class="content">
+    <div class="content" id="fade-in">
         <div class="team-title">Professional Development</div>
         <div class="team-description">The Professional Development Team is responsible for planning monthly professional development and leadership events for students interested in building a career in Data Science and Statistics. </div>
         <div class="team-image-row">
