--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li class="our-team-navbar">
                     <a>Our Teams</a>
                 <ul class="dropdown">
-                    <li ng-class="{ active: isActive('/internal-team')}"><a href="/our-teams-pages/internal-team.html">Internal</a></li>
+                    <li ng-class="{ active: isActive('/internal-team')}"><a href="#/our-teams-pages/internal-team.html">Internal</a></li>
                     <li ng-class="{ active: isActive('/prof-dev')}"><a href="/our-teams-pages/prof-dev.html">Professional Development</a></li>
                     <li ng-class="{ active: isActive(/aca-dev')}"><a href="/our-teams-pages/aca-dev.html">Academic Development</a></li>
                     <li ng-class="{ active: isActive('/consulting')}"><a href="/our-teams-pages/consulting.html">Consulting</a></li>
