--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-    <header>
     <nav class="navbar ms-auto" id="navBar">
         <!-- LOGO -->
         <a href="#"><img src="sdss-website-images/black-sdss-logo.png" alt="logo" /></a>
@@ -24,10 +23,10 @@
                 <li class="our-team-navbar">
                     <a>Our Teams</a>
                 <ul class="dropdown">
-                    <li ng-class="{ active: isActive('/internal-team')}"><a href="#/our-teams-pages/internal-team.html">Internal</a></li>
-                    <li ng-class="{ active: isActive('/prof-dev')}"><a href="/our-teams-pages/prof-dev.html">Professional Development</a></li>
-                    <li ng-class="{ active: isActive(/aca-dev')}"><a href="/our-teams-pages/aca-dev.html">Academic Development</a></li>
-                    <li ng-class="{ active: isActive('/consulting')}"><a href="/our-teams-pages/consulting.html">Consulting</a></li>
+                    <li><a href="our-teams-pages/internal-team.html">Internal</a></li>
+                    <li><a href="our-teams-pages/prof-dev.html">Professional Development</a></li>
+                    <li><a href="our-teams-pages/aca-dev.html">Academic Development</a></li>
+                    <li><a href="our-teams-pages/consulting.html">Consulting</a></li>
                 </ul>
                 <li><a href="#events">Events</a></li>
                 <li><a href="#join-us">Join Us</a></li>
@@ -35,8 +34,6 @@
             </div>
         </ul>
     </nav>
-    </header>
-    <ng-view></ng-view>
 
     <div class="content" id="fade-in">
         <div class="intro">
