added linkedin images and last exec images

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
 
             <div class="button-container">
-                <button type="button" class='get-in-touch'>Get in Touch</button>
+                <button type="button" class='get-in-touch'>Get Involved</button>
             </div>
 
         </div>
@@ -238,11 +238,15 @@
     <footer class="footer">
         <div class="footer-images">
             <img src="sdss-website-images/logo%202%201.png" alt="white-logo"/>
-            <img src="sdss-website-images/image%20(3)%201.png" alt="uoft"/>
+            <a href='https://www.utoronto.ca/'><img src="sdss-website-images/image%20(3)%201.png" alt="uoft"/></a>
         </div>
-        <div class="copyright">
+        <div class="footer-container">
+            <a class="email" href="mailto:sdss.uoft@gmail.com">sdss.uoft@gmail.com</a>
+            <div class="copyright">
             Students in Data Science and Statistics &copy 2023
+            </div>
         </div>
+        
         <div class="footer-socials">
             <a href="https://instagram.com/sdssuoft"><img src="sdss-website-images/image%203.png" alt="sdss-ig"/> </a>
             <a href="https://www.linkedin.com/company/students-in-data-science-and-statistics-sdss-uoft/">
