--- a/our-teams-pages/consulting.html
+++ b/our-teams-pages/consulting.html
@@ -58,14 +58,14 @@
         <div class="team-image-row">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/cello.jpg"/>
-                <div class="exec-name">Timothy Pasaribu</div>
+                <div class="exec-name">Timothy Marcello Rowland Benny Pasaribu</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Project Associate</div>
                 <div class="exec-socials"></div>
             </div>
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/claire.jpg"/>
-                <div class="exec-name-fit">Claire Jaroonjetjumnong</div>
+                <div class="exec-name">Claire Jaroonjetjumnong</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Project Associate</div>
                 <div class="exec-socials"></div>
@@ -95,7 +95,7 @@
                 <div class="exec-name">Mingon Song</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Project Manager</div>
-                <div class="exec-socials"></div>
+                <a href='https://www.linkedin.com/in/mingon-song-8b0154224/>'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
         </div>
         <div class="team-image-row spacing-down">
@@ -103,22 +103,21 @@
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/mojan.jpg"/>
                 <div class="exec-name">Mojad Majid</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
+                <!-- <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/> -->
                 <div class="exec-position">Project Associate</div>
-                <div class="exec-socials"></div>
+                <img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png"></img>
             </div>
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/krisha.jpg"/>
                 <div class="exec-name">Krisha Kalsi</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Project Associate</div>
-                <div class="exec-socials"></div>
             </div>
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/linh.jpg"/>
-                <div class="exec-name-fit">Nguyen Thao Linh Pham</div>
+                <div class="exec-name">Nguyen Thao Linh Pham</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Project Associate</div>
-                <div class="exec-socials"></div>
             </div>
         </div>
 
@@ -126,18 +125,22 @@
 
     <footer class="footer">
         <div class="footer-images">
-            <img src="../sdss-website-images/logo%202%201.png" alt="white-logo"/>
-            <img src="../sdss-website-images/image%20(3)%201.png" alt="uoft"/>
+            <img src="sdss-website-images/logo%202%201.png" alt="white-logo"/>
+            <a href='https://www.utoronto.ca/'><img src="sdss-website-images/image%20(3)%201.png" alt="uoft"/></a>
         </div>
-        <div class="copyright">
+        <div class="footer-container">
+            <a class="email" href="mailto:sdss.uoft@gmail.com">sdss.uoft@gmail.com</a>
+            <div class="copyright">
             Students in Data Science and Statistics &copy 2023
+            </div>
         </div>
+        
         <div class="footer-socials">
             <a href="https://instagram.com/sdssuoft"><img src="sdss-website-images/image%203.png" alt="sdss-ig"/> </a>
             <a href="https://www.linkedin.com/company/students-in-data-science-and-statistics-sdss-uoft/">
-                <img src="../sdss-website-images/image%201.png" alt="sdss-linkedin"/>
+                <img src="sdss-website-images/image%201.png" alt="sdss-linkedin"/>
             </a>
-            <a href="https://discord.gg/9b8Z5aGk36"><img src="../sdss-website-images/image 2.png" alt="sdss-discord"></a>
+            <a href="https://discord.gg/9b8Z5aGk36"><img src="sdss-website-images/image 2.png" alt="sdss-discord"></a>
         </div>
     </footer>
 
