--- a/our-teams-pages/prof-dev.html
+++ b/our-teams-pages/prof-dev.html
@@ -56,7 +56,7 @@
                 <div class="exec-name">Minha Faheem</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-VP of PD</div>
-                <div class="exec-socials"></div>
+                <a href='https://www.linkedin.com/in/minha-faheem/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
         </div>
 
@@ -67,7 +67,7 @@
                 <div class="exec-name">Khalid Edris</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-Director of Logistics</div>
-                <div class="exec-socials"></div>
+                <a href='https://www.linkedin.com/in/khalid-edris-081229244/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
 
             <div class="exec-container">
@@ -103,18 +103,22 @@
 
     <footer class="footer">
         <div class="footer-images">
-            <img src="../sdss-website-images/logo%202%201.png" alt="white-logo"/>
-            <img src="../sdss-website-images/image%20(3)%201.png" alt="uoft"/>
+            <img src="sdss-website-images/logo%202%201.png" alt="white-logo"/>
+            <a href='https://www.utoronto.ca/'><img src="sdss-website-images/image%20(3)%201.png" alt="uoft"/></a>
         </div>
-        <div class="copyright">
+        <div class="footer-container">
+            <a class="email" href="mailto:sdss.uoft@gmail.com">sdss.uoft@gmail.com</a>
+            <div class="copyright">
             Students in Data Science and Statistics &copy 2023
+            </div>
         </div>
+        
         <div class="footer-socials">
-            <a href="https://instagram.com/sdssuoft"><img src="../sdss-website-images/image%203.png" alt="sdss-ig"/> </a>
+            <a href="https://instagram.com/sdssuoft"><img src="sdss-website-images/image%203.png" alt="sdss-ig"/> </a>
             <a href="https://www.linkedin.com/company/students-in-data-science-and-statistics-sdss-uoft/">
-                <img src="../sdss-website-images/image%201.png" alt="sdss-linkedin"/>
+                <img src="sdss-website-images/image%201.png" alt="sdss-linkedin"/>
             </a>
-            <a href="https://discord.gg/9b8Z5aGk36"><img src="../sdss-website-images/image 2.png" alt="sdss-discord"></a>
+            <a href="https://discord.gg/9b8Z5aGk36"><img src="sdss-website-images/image 2.png" alt="sdss-discord"></a>
         </div>
     </footer>
 
