updated teams section design

--- a/our-teams-pages/prof-dev.html
+++ b/our-teams-pages/prof-dev.html
@@ -103,8 +103,8 @@
 
     <footer class="footer">
         <div class="footer-images">
-            <img src="sdss-website-images/logo%202%201.png" alt="white-logo"/>
-            <a href='https://www.utoronto.ca/'><img src="sdss-website-images/image%20(3)%201.png" alt="uoft"/></a>
+            <img src="../sdss-website-images/logo%202%201.png" alt="white-logo"/>
+            <a href='https://www.utoronto.ca/'><img src="../sdss-website-images/image%20(3)%201.png" alt="uoft"/></a>
         </div>
         <div class="footer-container">
             <a class="email" href="mailto:sdss.uoft@gmail.com">sdss.uoft@gmail.com</a>
@@ -114,11 +114,11 @@
         </div>
         
         <div class="footer-socials">
-            <a href="https://instagram.com/sdssuoft"><img src="sdss-website-images/image%203.png" alt="sdss-ig"/> </a>
+            <a href="https://instagram.com/sdssuoft"><img src="../sdss-website-images/image%203.png" alt="sdss-ig"/> </a>
             <a href="https://www.linkedin.com/company/students-in-data-science-and-statistics-sdss-uoft/">
-                <img src="sdss-website-images/image%201.png" alt="sdss-linkedin"/>
+                <img src="../sdss-website-images/image%201.png" alt="sdss-linkedin"/>
             </a>
-            <a href="https://discord.gg/9b8Z5aGk36"><img src="sdss-website-images/image 2.png" alt="sdss-discord"></a>
+            <a href="https://discord.gg/9b8Z5aGk36"><img src="../sdss-website-images/image 2.png" alt="sdss-discord"></a>
         </div>
     </footer>
 
