--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
-    <script href="index.js"></script>
 </head>
 
 <body>
@@ -129,7 +128,7 @@
                 Events
             </div>
                 
-            <div class="events-section">
+            <!-- <div class="events-section">
                 <div class="events-section-title">
                     Past Events
                 </div>
@@ -138,29 +137,30 @@
                 </div>
                 <div class="events-container">
                     <div class="events-button-container">
-                    <!-- add slideshow -->
                         <button type="button" class="events-button"><img class="events-arrow" src="/sdss-website-images/Arrow.png"/></button>
                     </div>
                     <div class="events-description">
                         Our group that enables a diverse community of passionate individuals to explore, learn, grow, and engage in social good in the world of Data Science and Statistics.
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="events-section">
                 <div class="events-section-title">
                     Upcoming Events
                 </div>
                 <div class="events-title">
-                    Title
+                    Resume/Cover Letter Workshop
                 </div>
                 <div class="events-container">
-                    <div class="events-button-container">
-                        <!-- add slideshow -->
-                            <button type="button" class="events-button"><img class="events-arrow" src="/sdss-website-images/Arrow.png"/></button>
-                    </div>
+                    <img class="resume-workshop" src="/sdss-website-images/events/Workshop/Resume&Cover/1.png"/>
                     <div class="events-description">
-                        Our group that enables a diverse community of passionate individuals to explore, learn, grow, and engage in social good in the world of Data Science and Statistics.
+                        We would like to invite you all to our first event of the year: Resume & Cover Letter Workshop! 
+                        <br><br>
+                        It will take place on Monday, October 2nd from 6:00pm - 7:30pm at MP 118 (McLennan Physical Laboratories, Room 118) with a hybrid option if you cannot make it in person. 
+                        We will have light refreshments for those of you who attend in person so please come in and say hi if you can! 
+                        <br><br>
+                        Further details are listed in the link to the sign-up form: https://forms.gle/3v8riAcSs4i4pGVP6
                     </div>
                 </div>
                 
@@ -343,7 +343,7 @@
 
 
     <script src="index.js"></script>
-<script type="text/javascript"
+    <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
     </script>
     <script type="text/javascript">
